# normal

./: .gitignore  CMakeLists.txt  README.md
include/ffmpeg/libavutil/: common.h
src/core/: CMakeLists.txt  lru_cache.hpp
src/ffm/: CMakeLists.txt  ffm.hpp  ffm_func.hpp  main.cpp  media.hpp
src/mystd/: CMakeLists.txt  main.cpp  my_variant.hpp
